# capstone-project

./: .gitignore  .user.yml  README.md  analysis.ipynb  pyproject.toml
models/marts/: dim_products.sql  dim_stores.sql  fct_orders.sql  mart_most_valuable_customer.sql  schema.yml
models/staging/: schema.yml  stg_customers.sql  stg_items.sql  stg_orders.sql  stg_products.sql  stg_stores.sql  stg_supplies.sql
